syntax = "proto3";  // syntax, required

option go_package = "pb/";  // go_package, required

package techschool.proto; // package name

import "proto/memory_message.proto";


message CPU {
  // Brand of CPU
  string brand = 1;
  // Name of CPU
  string name = 2;
  // Core of CPU
  uint32 num_cores = 3;
  // Thread of CPU
  uint32 num_threads = 4;
  // ghz of CPU
  double min_ghz = 5;
  double max_ghz = 6;
}

message GPU {
  string brand = 1;
  string name = 2;
  double min_ghz = 3;
  double max_ghz = 4;
  Memory memory = 5;
}